<?xml version="1.0" encoding="UTF-8"?>
<!-- * Copyright (c) 2007 Encore Research Group, University of Toronto *
  * This library is free software; you can redistribute it and/or * modify
  it under the terms of the GNU Lesser General Public * License as published
  by the Free Software Foundation; either * version 2.1 of the License, or
  (at your option) any later version. * * This library is distributed in the
  hope that it will be useful, * but WITHOUT ANY WARRANTY; without even the
  implied warranty of * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU * Lesser General Public License for more details. * * You should
  have received a copy of the GNU Lesser General Public * License along with
  this library; if not, write to the Free Software * Foundation, Inc., 51 Franklin
  Street, Fifth Floor, Boston, MA 02110-1301 USA -->

<!-- * Copyright (c) 2008-2017 Regents of the University of California (Regents).
  Created * by TELS, Graduate School of Education, University of California
  at Berkeley. * * This software is distributed under the GNU General Public
  License, v3. * * Permission is hereby granted, without written agreement
  and without license * or royalty fees, to use, copy, modify, and distribute
  this software and its * documentation for any purpose, provided that the
  above copyright notice and * the following two paragraphs appear in all copies
  of this software. * * REGENTS SPECIFICALLY DISCLAIMS ANY WARRANTIES, INCLUDING,
  BUT NOT LIMITED TO, * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
  FOR A PARTICULAR * PURPOSE. THE SOFTWARE AND ACCOMPANYING DOCUMENTATION, IF
  ANY, PROVIDED * HEREUNDER IS PROVIDED "AS IS". REGENTS HAS NO OBLIGATION
  TO PROVIDE * MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.
  * * IN NO EVENT SHALL REGENTS BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT,
  * SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING LOST PROFITS,
  * ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF
  * REGENTS HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.wise</groupId>
  <artifactId>wise</artifactId>
  <packaging>war</packaging>
  <name>Web-based Inquiry Science Environment</name>
  <version>5.7.6</version>
  <url>http://wise5.org</url>

  <licenses>
    <license>
      <name>GNU General Public License (GPL)</name>
      <url>http://www.gnu.org/licenses/gpl.html</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>hiroki</id>
      <name>Hiroki Terashima</name>
      <email>honchikun@gmail.com</email>
      <organization>TELS</organization>
      <organizationUrl>http://telscenter.org/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
    <developer>
      <id>geoff</id>
      <name>Geoffrey Kwan</name>
      <email>geoffreykwan@gmail.com</email>
      <organization>TELS</organization>
      <organizationUrl>http://telscenter.org/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
    <developer>
      <id>jon</id>
      <name>Jonathan Breitbart</name>
      <email>breity10@gmail.com</email>
      <organization>TELS</organization>
      <organizationUrl>http://telscenter.org/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/WISE-Community/WISE/</url>
    <connection>scm:git:git://github.com/WISE-Community/WISE.git</connection>
    <developerConnection>scm:git:git://github.com/WISE-Community/WISE.git</developerConnection>
  </scm>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/WISE-Community/WISE/issues</url>
  </issueManagement>

  <build>
    <testResources testOutputDirectory="${project.build.outputDirectory}">
      <testResource>
        <filtering>true</filtering>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>
    <finalName>wise</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.0.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.0.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>default-testCompile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <configuration>
              <testExcludes>
                <exclude>**/org/wise/portal/service/**/*.java</exclude>
                <exclude>**/org/wise/portal/domain/**/*.java</exclude>
                <exclude>**/org/wise/portal/presentation/web/controllers/general/contactwise/*.java</exclude>
                <exclude>**/org/wise/portal/presentation/web/controllers/teacher/**/*.java</exclude>
                <exclude>**/org/wise/portal/presentation/web/controllers/*.java</exclude>
                <exclude>**/org/wise/portal/presentation/validators/teacher/*.java</exclude>
                <exclude>**/org/wise/portal/dao/**/*.java</exclude>
              </testExcludes>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>
        <configuration>
          <forkMode>once</forkMode>
          <excludes>
            <exclude>**/org/wise/portal/service/**/*.java</exclude>
            <exclude>**/org/wise/portal/domain/**/*.java</exclude>
            <exclude>**/org/wise/portal/presentation/web/controllers/general/contactwise/*.java</exclude>
            <exclude>**/org/wise/portal/presentation/web/controllers/teacher/**/*.java</exclude>
            <exclude>**/org/wise/portal/presentation/web/controllers/*.java</exclude>
            <exclude>**/org/wise/portal/presentation/validators/teacher/*.java</exclude>
            <exclude>**/org/wise/portal/dao/**/*.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.4</version>
        <configuration>
          <failOnError>false</failOnError>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <webResources>
            <resource>
              <directory>
                src/main/webapp/WEB-INF
              </directory>
              <filtering>true</filtering>
              <includes>
                <include>web.xml</include>
              </includes>
              <targetPath>WEB-INF</targetPath>
            </resource>
            <resource>
              <directory>.</directory>
              <includes>
                <include>LICENSE.txt</include>
              </includes>
              <targetPath>META-INF</targetPath>
            </resource>
          </webResources>
          <packagingExcludes>
            WEB-INF/classes/sample/**,
            WEB-INF/classes/wise.properties,
            WEB-INF/classes/wise_development.properties,
            curriculum/**,
            studentuploads/**
          </packagingExcludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <port>8080</port>
          <contextFile>src/main/resources/tomcat-context.xml</contextFile>
          <path>/${project.build.finalName}</path>
          <systemProperties>
            <JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
          </systemProperties>
          <useTestClasspath>false</useTestClasspath>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <executions>
          <execution>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>java</executable>
          <mainClass>org.wise.util.DBInitExporter</mainClass>
          <includePluginDependencies>true</includePluginDependencies>
          <classpathScope>compile</classpathScope>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>repo1.maven.org</id>
      <url>http://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>jboss-maven2-repository</id>
      <name>jboss maven repository</name>
      <url>http://repository.jboss.org/maven2</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>JBoss</id>
      <name>JBoss repository</name>
      <url>http://repository.jboss.org/nexus/content/groups/public-jboss</url>
    </repository>
    <repository>
      <id>app-fuse</id>
      <url>http://static.appfuse.org/repository/</url>
    </repository>
    <repository>
      <id>jgit-repository</id>
      <url>http://download.eclipse.org/jgit/maven</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots />
      <id>Codehause Snapshots</id>
      <url>https://nexus.codehaus.org/content/repositories/codehaus-snapshots</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.websocket</groupId>
      <artifactId>javax.websocket-api</artifactId>
      <version>1.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.25</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.25</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-websocket</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-messaging</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aspects</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aop</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-orm</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context-support</artifactId>
      <version>${org.springframework.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-acl</artifactId>
      <version>${org.springframework.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
      <version>${org.springframework.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
      <version>${org.springframework.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-taglibs</artifactId>
      <version>${org.springframework.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.4.0</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.39</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${org.hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-c3p0</artifactId>
      <version>${org.hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-ehcache</artifactId>
      <version>${org.hibernate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.18.2-GA</version>
    </dependency>
    <dependency>
      <groupId>commons-fileupload</groupId>
      <artifactId>commons-fileupload</artifactId>
      <version>1.3.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.1</version>
    </dependency>
    <dependency>
      <groupId>javax.mail</groupId>
      <artifactId>mail</artifactId>
      <version>1.4.7</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.maven-play-plugin.net.tanesha.recaptcha4j</groupId>
      <artifactId>recaptcha4j</artifactId>
      <version>0.0.8</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>3.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>3.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml-schemas</artifactId>
      <version>3.7</version>
    </dependency>
    <dependency>
      <groupId>net.sf.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>2.3</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit</artifactId>
      <version>4.9.0.201710071750-r</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.6.1</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${org.springframework.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-websocket</artifactId>
      <version>7.0.52</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>3.5.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.powermock</groupId>
      <artifactId>powermock-module-junit4</artifactId>
      <version>${powermock.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.powermock</groupId>
      <artifactId>powermock-api-easymock</artifactId>
      <version>${powermock.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <org.springframework.version>4.3.9.RELEASE</org.springframework.version>
    <org.springframework.security.version>4.2.3.RELEASE</org.springframework.security.version>
    <org.hibernate.version>5.2.10.Final</org.hibernate.version>
    <powermock.version>1.7.1</powermock.version>
    <startup.listeners>
    </startup.listeners>
  </properties>

</project>
